# rootoftrust-sim

./: CMakeLists.txt  README.md
cmake/: FindSerialPort.cmake  FindYder.cmake
src/: cmd_handler.c  config.h  io.c  io.h  keycore.h  main.c  package.h  serial.h  utils.c  utils.h
src/interface/ethernet/: ethernet.c  ethernet.h
src/interface/serial/: serial.c
src/keycore/: keycore.c  keycore.h  keys.c
tool/: run.sh
tool/generate_key/: main.c
